2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.5

	* configure.ac: 0.3.5

2009-01-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update.

	* src/hd-incoming-events.c (group_window_response): Invoke default
	action for notifications in switcher when no D-Bus callback is
	defined. Fixes: NB#97103
	  (load_notification_groups): Make D-Bus callback optional.

2009-01-07  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Added fixed bug.

2009-01-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb): Select the
	background image only for the current view. Fixes NB#96380

	* debian/changelog: Update changelog.

2009-01-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c (hd_bookmark_manager_parse_bookmark_files,
	  hd_bookmark_manager_bookmark_files_changed,
	  hd_bookmark_manager_monitor_bookmark_files,
	  hd_bookmark_manager_get): Monitor bookmark files for changes and
	  parse them again. Fixes NB#95283

	* debian/changelog: Update changelog.

2009-01-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c
	  (hd_bookmark_shortcut_update_from_gconf): Only try to load thumbnail
	  icon when there was no error.
	  (hd_bookmark_shortcut_dispose): Add missing unrefs.
	  (hd_bookmark_shortcut_expose_event): Only draw thumbnail icon if
	  available. Fixes NB#96683

	* debian/changelog: Update changelog.

2008-12-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.4

	* configure.ac: 0.3.4

2008-12-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hildon-home.c (main): Initialize Hildon with hildon_init ().

2008-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am:
	* src/hd-task-manager.c (hd_task_manager_load_desktop_file):
	* src/home.conf.in:
	* src/home-w50.plugins (deleted): Remove Xmas workarounds.

2008-12-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
