@@ -1,3 +1,9 @@
+2009-01-14  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-notification-manager.c (hd_notification_manager_init): Change
+	directory for the persistent notifications db to
+	~/.config/hildon-desktop and create it if not exist.
+
 2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.5
